--- a/abridge/src/player-page.html
+++ b/abridge/src/player-page.html
@@ -41,6 +41,16 @@
 </script>
 
 <body>
+    <script type="module">
+        import init, { choose_play } from './robot.js';
+
+        async function run() {
+            await init();
+            console.log(choose_play("test"));
+        }
+
+        run();
+    </script>
     <button class="redeal" [% Action::Redeal %]>Redeal</button>
     <button class="robots" [% Action::SitAI %]>Robots</button>
     <main id="main">[% self.0 %]</main>
