make wasb robots work mostly

--- a/abridge/src/player-name.html
+++ b/abridge/src/player-name.html
@@ -2,14 +2,14 @@
 match self {
     IsMe::Other(PlayerName::None, seat) => {
         %]<span class="name">None<br/>
-            <button onclick="window.open('/[% seat.long_name() %]','_blank')">Sit here</button></span>[%
+            <button onclick="window.open('/robot/[% seat.long_name() %]','_blank')">Start robot</button></span>[%
     }
     IsMe::Other(PlayerName::Robot, seat) => {
-        %]<span class="name">Robot 🤖<br/>
-            <button onclick="window.open('/[% seat.long_name() %]','_blank')">Sit here</button></span>[%
+        %]<span class="name">Robot 🤖</span>[%
     }
-    IsMe::Other(PlayerName::Human(name), _) => {
-        %]<span class="name">[% name %]</span>[%
+    IsMe::Other(PlayerName::Human(name), seat) => {
+        %]<span class="name">[% name %]
+            <button onclick="window.open('/robot/[% seat.long_name() %]','_blank')">Replace with robot</button></span>[%
     }
     IsMe::Me(PlayerName::Human(name)) => {
         %]<span class="name" id="myname" contenteditable="True" oninput="sendname()">[% name %]</span>[%
