--- a/abridge/src/player-name.html
+++ b/abridge/src/player-name.html
@@ -4,8 +4,8 @@ match self {
         %]<span class="name">None<br/>
             <button onclick="window.open('/robot/[% seat.long_name() %]','_blank')">Start robot</button></span>[%
     }
-    IsMe::Other(PlayerName::Robot, seat) => {
-        %]<span class="name">Robot 🤖</span>[%
+    IsMe::Other(PlayerName::Robot(name), seat) => {
+        %]<span class="name">🤖 [% name %]</span>[%
     }
     IsMe::Other(PlayerName::Human(name), seat) => {
         %]<span class="name">[% name %]
