--- a/abridge/src/player-page.html
+++ b/abridge/src/player-page.html
@@ -42,6 +42,7 @@
 </script>
 
 <body>
+    <button class="robots" onclick="window.open('/robot/south','newwindow', 'width=300,height=250')">Robots</button>
     <button class="redeal" [% Action::Redeal %]>Redeal</button>
     <main id="main">[% self.0 %]</main>
 </body>
