--- a/abridge/src/player-page.html
+++ b/abridge/src/player-page.html
@@ -14,8 +14,25 @@
         const options = {
             roomName: 'ABridgeGame',
             width: "100%",
-            height: 700,
-            parentNode: document.querySelector('body'),
+            height: 150,
+            parentNode: document.querySelector('#meet'),
+            userInfo: {
+                displayName: '[% format!("{:?}", self.0.seat) %]'
+            },
+            configOverwrite: {
+                prejoinPageEnabled: false,
+                toolbarButtons: ['microphone', 'camera', 'filmstrip', 'tileview', 'settings', 'hangup'],
+            },
+            resolution: 240,
+            constraints: {
+                video: {
+                    height: {
+                        ideal: 240,
+                        max: 720,
+                        min: 240,
+                    },
+                },
+            },
             lang: 'en'
         };
         const api = new JitsiMeetExternalAPI('8x8.vc', options);
@@ -54,6 +71,7 @@
 </script>
 
 <body>
+    <details id="meet" open><summary>Jitsi meet</summary></details>
     <button class="robots" onclick="window.open('/robot/south','newwindow', 'width=300,height=250')">Robots</button>
     <button class="redeal" [% Action::Redeal %]>Redeal</button>
     <main id="main">[% self.0 %]</main>
