--- a/abridge/src/index.html
+++ b/abridge/src/index.html
@@ -16,13 +16,13 @@
             Please play.
         </p>
         <ul>
-            [% if self.players.0[Seat::North].is_empty() { %]<li><a href="north">Sit North</a></li>[% } %]
-            [% if self.players.0[Seat::South].is_empty() { %]<li><a href="south">Sit South</a></li>[% } %]
-            [% if self.players.0[Seat::East].is_empty() { %]<li><a href="east">Sit East</a></li>[% } %]
-            [% if self.players.0[Seat::West].is_empty() { %]<li><a href="west">Sit West</a></li>[% } %]
-            [% if self.players.0[Seat::West].is_empty() ||
-            self.players.0[Seat::East].is_empty() ||
-            self.players.0[Seat::North].is_empty() || self.players.0[Seat::South].is_empty() { %]<li><a
+            [% if self.players.0[Seat::North].not_human() { %]<li><a href="north">Sit North</a></li>[% } %]
+            [% if self.players.0[Seat::South].not_human() { %]<li><a href="south">Sit South</a></li>[% } %]
+            [% if self.players.0[Seat::East].not_human() { %]<li><a href="east">Sit East</a></li>[% } %]
+            [% if self.players.0[Seat::West].not_human() { %]<li><a href="west">Sit West</a></li>[% } %]
+            [% if self.players.0[Seat::West].not_human() ||
+            self.players.0[Seat::East].not_human() ||
+            self.players.0[Seat::North].not_human() || self.players.0[Seat::South].not_human() { %]<li><a
             href="random">Sit randomly</a></li>[% } %]
         </ul>
     </main>
