start supporting multiple tables

--- a/abridge/src/player-page.html
+++ b/abridge/src/player-page.html
@@ -3,7 +3,7 @@
 
 <head>
     <title> [% format!("{:?}", self.0.seat) %] </title>
-    <link rel="stylesheet" href="[% self.0.game.root as URL %]style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
