--- a/abridge/src/robot-page.html
+++ b/abridge/src/robot-page.html
@@ -3,7 +3,7 @@
 
 <head>
     <title> Robot [% format!("{:?}", self.seat) %]</title>
-    <link rel="stylesheet" href="[% self.game.root as URL %]/style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +11,7 @@
 
 <body>
     <script type="module">
-        import init, { choose_play } from '[% self.game.root as URL %]/robot.js';
+        import init, { choose_play } from '/robot.js';
         await init();
     
         var ws_protocol = 'ws://';
