get multiple tables working mostly

--- a/abridge/src/index.html
+++ b/abridge/src/index.html
@@ -49,9 +49,9 @@
         <header>
             <h1> Abridge Game </h1>
         </header>
-        <div id="tables" class="tabletosit">
-            [% self.table %]
-        </div>
+        <section id="tables">
+            [% self.room %]
+        </section>
     </main>
 </body>
 
