--- a/abridge/src/robot-page.html
+++ b/abridge/src/robot-page.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title> Robot [% format!("{:?}", self.seat) %]</title>
+    <title> Robot</title>
     <link rel="stylesheet" href="/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
