show more buttons

--- a/abridge/src/player-page.html
+++ b/abridge/src/player-page.html
@@ -22,7 +22,7 @@
             },
             configOverwrite: {
                 prejoinPageEnabled: false,
-                toolbarButtons: ['microphone', 'camera', 'hangup'],
+                toolbarButtons: ['microphone', 'camera', 'tileview', 'settings', 'hangup'],
             },
             interfaceConfigOverwrite: {
                 DISABLE_DOMINANT_SPEAKER_INDICATOR: true,
